<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8F1">

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organizer_dashboard_title"
        android:textSize="24sp"
        android:textColor="#4E342E"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:id="@+id/summaryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#A1887F"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dashboardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/totalEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_events"
            android:textAlignment="center"
            android:textColor="#4E342E"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/totalVolunteers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_volunteers"
            android:textAlignment="center"
            android:textColor="#4E342E"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/postEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/post_event"
        android:backgroundTint="#8D6E63"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/summaryLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/organizerEventRecyclerView"
        android:layout_width="406dp"
        android:layout_height="475dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postEventButton" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#4E342E"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
